--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -26,10 +26,9 @@
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Portfolio</a>
+                    <a class="nav-link dropdown-toggle" id="navbarDropdownPortfolio" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Alternatives</a>
                     <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownPortfolio">
-                        <li><a class="dropdown-item" href="portfolio-overview.html">Portfolio Overview</a></li>
-                        <li><a class="dropdown-item" href="portfolio-item.html">Portfolio Item</a></li>
+                        <li><a class="dropdown-item" th:href="@{/users/new}">Create user</a></li>
                     </ul>
                 </li>
             </ul>
