--- a/src/main/resources/templates/users-edit.html
+++ b/src/main/resources/templates/users-edit.html
@@ -10,19 +10,8 @@
   <!-- Page Content-->
   <section layout:fragment="body" class="py-5">
     <div class="container">
-      <form role="form" method="post" th:action="@{/users/{email}/edit(email={$user.email})}" th:object="${user}">
+      <form role="form" method="post" th:action="@{/users/{email}/edit(email=${user.email})}" th:object="${user}">
         <input type="hidden" th:field="*{email}">
-        <div class="form-group">
-          <label for="email">Email address</label>
-          <input
-                  type="text"
-                  class="form-control"
-                  id="email"
-                  name="email"
-                  th:field="*{email}"
-                  aria-describedby="emailHelp">
-          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-        </div>
         <div class="form-group mb-3">
           <label for="password">Password</label>
           <input
@@ -50,7 +39,7 @@
                   name="lastName"
                   th:field="*{lastName}">
         </div>
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-primary">Update</button>
       </form>
     </div>
   </section>
