--- a/src/main/resources/templates/users-edit.html
+++ b/src/main/resources/templates/users-edit.html
@@ -20,6 +20,7 @@
                   id="password"
                   name="password"
                   th:field="*{password}">
+          <p th:if="${#fields.hasErrors('password')}" class="text-danger" th:errors="*{password}"></p>
         </div>
         <div class="form-group mb-3">
           <label for="firstName">Firstname</label>
@@ -29,6 +30,7 @@
                   id="firstName"
                   name="firstName"
                   th:field="*{firstName}">
+          <p th:if="${#fields.hasErrors('firstName')}" class="text-danger" th:errors="*{firstName}"></p>
         </div>
         <div class="form-group mb-3">
           <label for="lastName">Lastname</label>
@@ -38,6 +40,7 @@
                   id="lastName"
                   name="lastName"
                   th:field="*{lastName}">
+          <p th:if="${#fields.hasErrors('lastName')}" class="text-danger" th:errors="*{lastName}"></p>
         </div>
         <button type="submit" class="btn btn-primary">Update</button>
       </form>
