-Cleaned up UserController -Disabled Thymeleaf layout implementation in users-list.html

--- a/src/main/resources/templates/users-list.html
+++ b/src/main/resources/templates/users-list.html
@@ -1,14 +1,12 @@
 <html
-        xmlns:th="http://thymeleaf.org"
-        xmlns:layout="http://ultraq.net.nz/thymeleaf/layout"
-        layout:decorate="~{layout}">
+        >
 <body class="d-flex flex-column h-100">
 <main class="flex-shrink-0">
     <!-- Page Content-->
-    <section layout:fragment="body" class="py-5">
+    <section class="py-5">
         <div class="container px-5 my-5">
             <div class="text-center mb-5">
-                <h1 class="fw-bolder">Din ekonomi</h1>
+                <h1 class="fw-bolder">Användare</h1>
             </div>
             <div class="row gx-5">
                 <div th:each="user : ${users}" class="col-lg-6 mb-2">
