--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org"
-                xmlns:layout="http://ultraq.net.nz/thymeleaf/layout">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+                xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+                layout:decorate="~{layout}">
 <head>
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/boootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet"/>
