--- a/src/main/resources/templates/users-create.html
+++ b/src/main/resources/templates/users-create.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html
         lang="en"
+        xmlns:th="http://www.thymeleaf.org"
         >
 <head>
   <title>Spara och Para - Ny användare</title>
