--- a/src/main/resources/templates/users-edit.html
+++ b/src/main/resources/templates/users-edit.html
@@ -1,53 +1,64 @@
+<!doctype html>
 <html
-        xmlns:th="http://thymeleaf.org"
-        xmlns:layout="http://ultraq.net.nz/thymeleaf/layout"
-        layout:decorate="~{layout}">
+        lang="en"
+        xmlns:th="http://www.thymeleaf.org"
+>
 <head>
-  <title>User Edit</title>
-</head>
-<body class="d-flex flex-column h-100">
-<main class="flex-shrink-0">
-  <!-- Page Content-->
-  <section layout:fragment="body" class="py-5">
-    <div class="container">
-      <form role="form" method="post" th:action="@{/users/{email}/edit(email=${user.email})}" th:object="${user}">
-        <input type="hidden" th:field="*{email}">
-        <div class="form-group mb-3">
-          <label for="password">Password</label>
-          <input
-                  type="text"
-                  class="form-control"
-                  id="password"
-                  name="password"
-                  th:field="*{password}">
-          <p th:if="${#fields.hasErrors('password')}" class="text-danger" th:errors="*{password}"></p>
-        </div>
-        <div class="form-group mb-3">
-          <label for="firstName">Firstname</label>
-          <input
-                  type="text"
-                  class="form-control"
-                  id="firstName"
-                  name="firstName"
-                  th:field="*{firstName}">
-          <p th:if="${#fields.hasErrors('firstName')}" class="text-danger" th:errors="*{firstName}"></p>
-        </div>
-        <div class="form-group mb-3">
-          <label for="lastName">Lastname</label>
-          <input
-                  type="text"
-                  class="form-control"
-                  id="lastName"
-                  name="lastName"
-                  th:field="*{lastName}">
-          <p th:if="${#fields.hasErrors('lastName')}" class="text-danger" th:errors="*{lastName}"></p>
-        </div>
-        <button type="submit" class="btn btn-primary">Update</button>
-      </form>
-    </div>
-  </section>
+  <title>Spara och Para - Användarlista</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-</main>
+  <th:block th:with="fontUrl='https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap'">
+    <link rel="stylesheet" th:href="@{${fontUrl}}"/>
+  </th:block>
+
+  <link rel="stylesheet" th:href="@{https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css}">
+
+  <link rel="stylesheet" th:href="@{/css/style.css}">
+
+</head>
+<body class="img js-fullheight" style="background-image: url(/images/test_copy.jpg);">
+<section class="ftco-section">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6 text-center mb-5">
+        <h2 class="heading-section">Spara och Para</h2>
+      </div>
+    </div>
+    <div class="row justify-content-center">
+      <div class="col-md-6 col-lg-4">
+        <div class="login-wrap p-0">
+          <h3 class="mb-4 text-center">Ändra uppgifter</h3>
+          <form role="form" method="post" th:action="@{/users/{email}/edit(email=${user.email})}" th:object="${user}">
+            <div class="form-group">
+              <input type="text" class="form-control" id="firstName" name="firstName" th:field="*{firstName}" placeholder="Förnamn" required>
+              <p th:if="${#fields.hasErrors('firstName')}" class="text-danger" th:errors="*{firstName}"></p>
+            </div>
+            <div class="form-group">
+              <input type="text" class="form-control" id="lastName" name="lastName" th:field="*{lastName}" placeholder="Efternamn" required>
+              <p th:if="${#fields.hasErrors('lastName')}" class="text-danger" th:errors="*{lastName}"></p>
+            </div>
+            <div class="form-group">
+              <input type="password" class="form-control" id="password" name="password" th:field="*{password}" placeholder="Lösenord" required>
+              <p th:if="${#fields.hasErrors('password')}" class="text-danger" th:errors="*{password}"></p>
+            </div>
+
+            <div class="form-group">
+              <button type="submit" class="form-control btn btn-primary submit px-3">Ändra uppgifter</button>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<script th:src="@{/js/jquery.min.js}"></script>
+<script th:src="@{/js/popper.js}"></script>
+<script th:src="@{/js/bootstrap.min.js}"></script>
+<script th:src="@{/js/main.js}"></script>
 
 </body>
 </html>
+
+
