--- a/src/main/resources/templates/users-edit.html
+++ b/src/main/resources/templates/users-edit.html
@@ -4,7 +4,7 @@
         xmlns:th="http://www.thymeleaf.org"
 >
 <head>
-  <title>Spara och Para - Användarlista</title>
+  <title>Spara och Para - Ändra uppgifter</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
