--- a/src/main/resources/templates/users-edit.html
+++ b/src/main/resources/templates/users-edit.html
@@ -52,6 +52,9 @@
   </div>
 </section>
 
+<div th:replace="layout.html :: menu">
+</div>
+
 <script th:src="@{/js/jquery.min.js}"></script>
 <script th:src="@{/js/popper.js}"></script>
 <script th:src="@{/js/bootstrap.min.js}"></script>
