-Fixed deprecated fragment expression.

--- a/src/main/resources/templates/users-create.html
+++ b/src/main/resources/templates/users-create.html
@@ -57,7 +57,7 @@
   </div>
 </section>
 
-<div th:replace="layout.html :: menu">
+<div th:replace="~{layout.html :: menu}">
 </div>
 
 <script th:src="@{/js/jquery.min.js}"></script>
