--- a/src/main/resources/templates/users-edit.html
+++ b/src/main/resources/templates/users-edit.html
@@ -52,7 +52,7 @@
   </div>
 </section>
 
-<div th:replace="layout.html :: menu">
+<div th:replace="~{layout.html :: menu}">
 </div>
 
 <script th:src="@{/js/jquery.min.js}"></script>
