-Refactored login-page to index.html

--- a/src/main/resources/templates/users-list.html
+++ b/src/main/resources/templates/users-list.html
@@ -41,7 +41,7 @@
                             <a class="btn btn-primary" th:href="@{/users/{email}/edit(email=${user.email})}">Edit</a>
                         </div>
                     </div>
-                    <p class="w-100 text-center"><a href="index-test3.html">— Redan konto? Logga in —</a></p>
+                    <p class="w-100 text-center"><a href="index.html">— Redan konto? Logga in —</a></p>
                 </div>
             </div>
         </div>
