--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,18 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"
+	  xmlns:th="http://www.thymeleaf.org">
   <head>
   	<title>Spara och Para - Login</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	  <meta charset="utf-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
+	  <th:block th:with="fontUrl='https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap'">
+		  <link rel="stylesheet" th:href="@{${fontUrl}}"/>
+	  </th:block>
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	
-	<link rel="stylesheet" href="../static/css/style.css">
+	  <link rel="stylesheet" th:href="@{https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css}">
 
+	  <link rel="stylesheet" th:href="@{/css/style.css}">
 	</head>
-	<body class="img js-fullheight" style="background-image: url(../static/images/test_copy.jpg);">
+
+	<body class="img js-fullheight" style="background-image: url(/images/test_copy.jpg);">
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
@@ -43,10 +46,13 @@
 		</div>
 	</section>
 
-	<script src="../static/js/jquery.min.js"></script>
-  <script src="../static/js/popper.js"></script>
-  <script src="../static/js/bootstrap.min.js"></script>
-  <script src="../static/js/main.js"></script>
+	<div th:replace="~{layout.html :: menu}">
+	</div>
+
+	<script th:src="@{/js/jquery.min.js}"></script>
+	<script th:src="@{/js/popper.js}"></script>
+	<script th:src="@{/js/bootstrap.min.js}"></script>
+	<script th:src="@{/js/main.js}"></script>
 
 	</body>
 </html>
