-Fixed pathway to links

--- a/src/main/resources/templates/users-create.html
+++ b/src/main/resources/templates/users-create.html
@@ -50,7 +50,7 @@
               <button type="submit" class="form-control btn btn-primary submit px-3">Skapa användare</button>
             </div>
           </form>
-          <p class="w-100 text-center"><a href="index.html">— Redan konto? Logga in —</a></p>
+          <p class="w-100 text-center"><a th:href="@{../}">— Redan konto? Logga in —</a></p>
         </div>
       </div>
     </div>
