--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,7 +39,7 @@
 	            	<button type="submit" class="form-control btn btn-primary submit px-3">Logga In</button>
 	            </div>
 				</form>
-				<p class="w-100 text-center"><a href="users-create.html">— Ny användare —</a></p>
+				<p class="w-100 text-center"><a th:href="@{/users/new}">— Ny användare —</a></p>
 					</div>
 				</div>
 			</div>
