-Replaced script-expressions with layout.html th:fragment.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -49,10 +49,8 @@
 	<div th:replace="~{layout.html :: menu}">
 	</div>
 
-	<script th:src="@{/js/jquery.min.js}"></script>
-	<script th:src="@{/js/popper.js}"></script>
-	<script th:src="@{/js/bootstrap.min.js}"></script>
-	<script th:src="@{/js/main.js}"></script>
+	<div th:replace="~{layout.html :: scripts}">
+	</div>
 
 	</body>
 </html>
