--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,6 +19,14 @@
         </nav>
     </div>
 </div>
+
+<div th:fragment="scripts">
+    <script th:src="@{/js/jquery.min.js}"></script>
+    <script th:src="@{/js/popper.js}"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
+    <script th:src="@{/js/main.js}"></script>
+</div>
+
 </body>
 </html>
 
