--- a/src/main/resources/templates/users-create.html
+++ b/src/main/resources/templates/users-create.html
@@ -1,7 +1,6 @@
 <!doctype html>
-<html
-        lang="en"
-        xmlns:th="http://www.thymeleaf.org"
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
         >
 <head>
   <title>Spara och Para - Ny användare</title>
@@ -17,6 +16,7 @@
   <link rel="stylesheet" th:href="@{/css/style.css}">
 
 </head>
+
 <body class="img js-fullheight" style="background-image: url(/images/test_copy.jpg);">
 <section class="ftco-section">
   <div class="container">
