--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -1,9 +1,18 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Layout page</title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <th:block th:fragment="head">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+        <th:block th:with="fontUrl='https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap'">
+            <link rel="stylesheet" th:href="@{${fontUrl}}"/>
+        </th:block>
+
+        <link rel="stylesheet" th:href="@{https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css}">
+
+        <link rel="stylesheet" th:href="@{/css/style.css}">
+    </th:block>
 </head>
 <body>
 <div th:fragment="menu">
