--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,17 +18,22 @@
 				<div class="col-md-6 col-lg-4">
 					<div class="login-wrap p-0">
 		      	<h3 class="mb-4 text-center">Redan registrerad?</h3>
-		      	<form action="#" class="signin-form">
+		      	<form th:action="@{/login}" method="post" class="signin-form">
 		      		<div class="form-group">
-		      			<input type="text" class="form-control" placeholder="Epost" required>
+		      			<input type="text" class="form-control" placeholder="Epost" name="email" required>
 		      		</div>
 	            <div class="form-group">
-	              <input id="password-field" type="password" class="form-control" placeholder="Lösenord" required>
+	              <input id="password-field" type="password" class="form-control" placeholder="Lösenord" name="password" required>
 	              <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
 	            </div>
+
 	            <div class="form-group">
+					<div th:if="${error}">
+						<p th:text="${error}" style="color: red;"></p>
+					</div>
 	            	<button type="submit" class="form-control btn btn-primary submit px-3">Logga In</button>
 	            </div>
+
 				</form>
 				<p class="w-100 text-center"><a th:href="@{/users/new}">— Ny användare —</a></p>
 					</div>
