--- a/src/main/resources/templates/groups-list.html
+++ b/src/main/resources/templates/groups-list.html
@@ -28,10 +28,16 @@
                                 <p th:text="${user.lastName}" class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!" style="display: inline-block; font-size: 14px;"></p>
                             </div>
                         </div>
-                        <div class="position-relative mb-2">
-                            <a class="btn btn-primary" th:href="@{/users/{email}/edit(email=${user.email})}">Edit</a>
-                        </div>
                     </div>
+                    <form role="form" method="post" th:action="@{/groups/new}" th:object="${group}">
+                        <div class="form-group">
+                            <input type="text" class="form-control" id="groupName" name="groupName" th:field="*{groupName}" placeholder="Gruppnamn" required>
+                            <p th:if="${#fields.hasErrors('groupName')}" class="text-danger" th:errors="*{groupName}"></p>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit" class="form-control btn btn-primary submit px-3">Skapa grupp</button>
+                        </div>
+                    </form>
                     <p class="w-100 text-center"><a href="index.html">— Redan konto? Logga in —</a></p>
                 </div>
             </div>
