-Group-stuff -Added and implemented saveGroup-method

--- a/src/main/resources/templates/groups-list.html
+++ b/src/main/resources/templates/groups-list.html
@@ -29,8 +29,7 @@
                         </div>
 
                     </div>
-
-                    <p class="w-100 text-center"><a href="index.html">— Redan konto? Logga in —</a></p>
+                    <p class="w-100 text-center"><a th:href="">— Skapa ny grupp —</a></p>
                 </div>
             </div>
         </div>
