--- a/src/main/resources/templates/groups-list.html
+++ b/src/main/resources/templates/groups-list.html
@@ -23,13 +23,12 @@
                     <div th:each="group : ${groups}" class="col-lg-6 mb-2 text-center mx-auto" style="min-width: 250px; max-width: fit-content; border: 1px solid #ccc; background-color: rgba(255, 255, 255, 0.8);">
                         <div class="position-relative mb-2">
                             <div style="display: inline-block;">
-                                <p th:text="${group.getId()}" class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!" style="display: inline-block; font-size: 14px;"></p>
                                 <p th:text="${group.getName()}" class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!" style="display: inline-block; font-size: 14px;"></p>
                             </div>
                         </div>
 
                     </div>
-                    <p class="w-100 text-center"><a th:href="">— Skapa ny grupp —</a></p>
+                    <p class="w-100 text-center"><a th:href="@{/{userEmail}/groups/new(userEmail=${userEmail})}">— Skapa ny grupp —</a></p>
                 </div>
             </div>
         </div>
