Fixat login-validering

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,7 +29,7 @@
 
 	            <div class="form-group">
 					<div th:if="${error}">
-						<p th:text="${error}" style="color: red;"></p>
+						<p th:text="${error}" style="color: red; text-align: center;"></p>
 					</div>
 	            	<button type="submit" class="form-control btn btn-primary submit px-3">Logga In</button>
 	            </div>
