--- a/src/main/resources/templates/ass.html
+++ b/src/main/resources/templates/ass.html
@@ -4,12 +4,12 @@
 >
 <head>
   <title>Transactions Pie Chart</title>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.min.js"></script>
+  <script th:src="@{/js/Chart.min.js}"></script>
 </head>
 <body>
 <canvas id="pie-chart"></canvas>
 
-<script>
+<script th:inline="javascript">
   var data = {
     labels: [],
     datasets: [{
@@ -17,14 +17,6 @@
       backgroundColor: []
     }]
   };
-
-  var dataMap = /*[[${dataMap}]]*/ {};
-
-  Object.keys(dataMap).forEach(function(key) {
-    data.labels.push(key);
-    data.datasets[0].data.push(dataMap[key]);
-    data.datasets[0].backgroundColor.push(getRandomColor());
-  });
 
   function getRandomColor() {
     var letters = '0123456789ABCDEF';
@@ -36,6 +28,14 @@
 
     return color;
   }
+
+  var dataMap = /*[[${dataMap}]]*/ {};
+
+  Object.keys(dataMap).forEach(function(key) {
+    data.labels.push(key);
+    data.datasets[0].data.push(dataMap[key]);
+    data.datasets[0].backgroundColor.push(getRandomColor());
+  });
 
   var totalAmount = /*[[${totalAmount}]]*/ 0;
   var options = {
@@ -55,6 +55,9 @@
     data: data,
     options: options
   });
+
+  console.log(document.getElementById('pie-chart'));
+
 </script>
 </body>
 </html>
