-Experimenting with dynamic menu-links.

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -21,7 +21,7 @@
         <nav>
             <ul style="display: flex; justify-content: center; align-items: center; margin: 0; padding: 0;">
                 <li style="list-style: none; margin-right: 20px;"><a href="#">Hem</a></li>
-                <li style="list-style: none; margin-right: 20px;"><a href="#">Grupper</a></li>
+                <li style="list-style: none; margin-right: 20px;"><a th:href="@{'/' + ${userEmail} + '/groups'}">Grupper</a></li>
                 <li style="list-style: none; margin-right: 20px;"><a href="#">Budget</a></li>
                 <li style="list-style: none; margin-right: 20px;"><a href="#">Inställningar</a></li>
             </ul>
