--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -1,4 +1,8 @@
-<html xmlns:th="http://thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+  <title>Spara och Para - Transaktioner</title>
+  <th:block th:replace="~{layout.html :: head}"></th:block>
+</head>
 <body class="d-flex flex-column h-100">
 <main class="flex-shrink-0">
   <!-- Navigation-->
@@ -7,7 +11,7 @@
     <div class="container px-5 my-5">
       <div class="text-center mb-5">
         <h1 class="fw-bolder">Spara och Para</h1>
-        <p class="lead fw-normal text-muted mb-0">Fetch group id and name</p>
+        <p class="lead fw-normal text-muted mb-0">Fetch group id, name and amount</p>
       </div>
       <div class="row gx-5">
         <div th:each="transaction : ${transactions}" class="col-lg-6">
@@ -21,11 +25,11 @@
     </div>
   </section>
 </main>
-<!-- Footer-->
 
-<!-- Bootstrap core JS-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Core theme JS-->
-<script src="js/scripts.js"></script>
+<div th:replace="~{layout.html :: menu}">
+</div>
+<div th:replace="~{layout.html :: scripts}">
+</div>
+
 </body>
 </html>
