-(Fixed missing lang-attribute) -Transaction experimentation with fetch and for/each-loop

--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -1,4 +1,4 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
   <title>Spara och Para - Transaktioner</title>
   <th:block th:replace="~{layout.html :: head}"></th:block>
