--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -5,20 +5,25 @@
 </head>
 <body class="d-flex flex-column h-100">
 <main class="flex-shrink-0">
-  <!-- Navigation-->
-  <!-- Page Content-->
   <section class="py-5">
     <div class="container px-5 my-5">
       <div class="text-center mb-5">
-        <h1 class="fw-bolder">Spara och Para</h1>
-        <p class="lead fw-normal text-muted mb-0">Fetch group id, name and amount</p>
+        <h2 class="fw-bolder">Spara och Para</h2>
+        <p class="lead fw-normal text-muted mb-0">Fetch group-ID, name and amount</p>
       </div>
-      <div class="row gx-5">
-        <div th:each="transaction : ${transactions}" class="col-lg-6">
-          <div class="position-relative mb-5">
-            <a th:text="${transaction.id}" class="h3 fw-bolder text-decoration-none link-dark stretched-link">Project name</a>
-            <a th:text="${transaction.description}" class="h3 fw-bolder text-decoration-none link-dark stretched-link">Project name</a>
-            <a th:text="${transaction.amount}" class="h3 fw-bolder text-decoration-none link-dark stretched-link">Project name</a>
+      <div class="row justify-content-center">
+        <div class="col-md-6 col-lg-4">
+          <div class="login-wrap p-0">
+            <div th:each="transaction : ${transactions}" th:sort="${transaction.id}" class="col-lg-6 mb-2 text-center mx-auto" style="min-width: 250px; max-width: fit-content; border: 1px solid #ccc; background-color: rgba(255, 255, 255, 0.8);">
+              <div class="position-relative mb-2">
+                <div style="display: inline-block;">
+                  <p th:text="${transaction.id}" class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!" style="display: inline-block; font-size: 14px;"></p>
+                  <p th:text="${transaction.description}" class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!" style="display: inline-block; font-size: 14px;"></p>
+                  <p th:text="${transaction.amount}" class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!" style="display: inline-block; font-size: 14px;"></p>
+                </div>
+              </div>
+            </div>
+            <p class="w-100 text-center"><a th:href="@{/{userEmail}/transactions/new(userEmail=${userEmail})}">— Skapa ny transaktion —</a></p>
           </div>
         </div>
       </div>
@@ -33,3 +38,4 @@
 
 </body>
 </html>
+
