Preparations for Testdag 2: -Added new redirect from postmapping users/new to {userEmail}/users with dynamic welcoming-message. -Added dynamic links in menu to a user's groups and transactions.

--- a/src/main/resources/templates/groups-list.html
+++ b/src/main/resources/templates/groups-list.html
@@ -19,7 +19,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6 col-lg-4">
                 <div class="login-wrap p-0">
-                    <h3 class="mb-4 text-center" th:text="${userEmail} + '\'s Grupper'">User's Grupper</h3>
+                    <h3 class="mb-4 text-center" th:text="${firstName} + '\'s Grupper'">User's Grupper</h3>
                     <div th:each="group : ${groups}" class="col-lg-6 mb-2 text-center mx-auto" style="min-width: 250px; max-width: fit-content; border: 1px solid #ccc; background-color: rgba(255, 255, 255, 0.8);">
                         <div class="position-relative mb-2">
                             <div style="display: inline-block;">
