--- a/src/main/resources/templates/transactions.html
+++ b/src/main/resources/templates/transactions.html
@@ -3,7 +3,7 @@
   <title>Spara och Para - Transaktioner</title>
   <th:block th:replace="~{layout.html :: head}"></th:block>
 </head>
-<body class="d-flex flex-column h-100">
+<body class="img js-fullheight" style="background-image: url(/images/test_copy.jpg);">
 <main class="flex-shrink-0">
   <section class="py-5">
     <div class="container px-5 my-5">
