--- a/src/main/resources/templates/users-list.html
+++ b/src/main/resources/templates/users-list.html
@@ -19,7 +19,7 @@
         <div class="row justify-content-center">
             <div class="col-md-6 col-lg-4">
                 <div class="login-wrap p-0">
-                    <h3 class="mb-4 text-center">Alla användare</h3>
+                    <h3 class="mb-4 text-center" th:text="'Välkommen ' + ${firstName} + '!'">Alla användare</h3>
                     <div th:each="user : ${users}" class="col-lg-6 mb-2 text-center mx-auto" style="min-width: 250px; max-width: fit-content; border: 1px solid #ccc; background-color: rgba(255, 255, 255, 0.8);">
                         <div class="position-relative mb-2">
                             <div style="display: inline-block;">
@@ -32,7 +32,6 @@
                             <a class="btn btn-primary" th:href="@{/users/{email}/edit(email=${user.email})}">Edit</a>
                         </div>
                     </div>
-                    <p class="w-100 text-center"><a href="index.html">— Redan konto? Logga in —</a></p>
                 </div>
             </div>
         </div>
