--- a/src/main/resources/templates/users-create.html
+++ b/src/main/resources/templates/users-create.html
@@ -37,6 +37,9 @@
               <p th:if="${#fields.hasErrors('password')}" class="text-danger" th:errors="*{password}"></p>
             </div>
             <div class="form-group">
+              <div th:if="${error}">
+                <p th:text="${error}" style="color: red; text-align: center;"></p>
+              </div>
               <button type="submit" class="form-control btn btn-primary submit px-3">Skapa användare</button>
             </div>
           </form>
