--- a/src/main/resources/templates/users-list.html
+++ b/src/main/resources/templates/users-list.html
@@ -39,6 +39,9 @@
     </div>
 </section>
 
+<div th:replace="~{layout.html :: piechart}">
+</div>
+
 <div th:replace="~{layout.html :: menu}">
 </div>
 
