--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -37,6 +37,7 @@
 </div>
 
 <div th:fragment="piechart">
+    <script th:src="@{/js/Chart.min.js}"></script>
     <script th:inline="javascript">
         var data = {
             labels: [],
