--- a/src/main/resources/templates/groups-list.html
+++ b/src/main/resources/templates/groups-list.html
@@ -32,6 +32,8 @@
                 </div>
             </div>
         </div>
+        <div th:replace="~{layout.html :: piechart}">
+        </div>
     </div>
 </section>
 
