--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" th:href="@{/css/test.css}">
 </head>
 
-<body id="ihcx" class="img js-fullheight" style="background-image: url(/images/test_copy.jpg);">
+<body id="ihcx">
 
 <div class="gjs-row" id="i7c7">
     <!--Left column-->
