--- a/src/main/resources/templates/groups-list.html
+++ b/src/main/resources/templates/groups-list.html
@@ -28,7 +28,7 @@
                         </div>
 
                     </div>
-                    <p class="w-100 text-center"><a th:href="@{/{userEmail}/groups/new(userEmail=${userEmail})}">— Skapa ny grupp —</a></p>
+                    <p class="w-100 text-center"><a th:href="@{/groups/new}">— Skapa ny grupp —</a></p>
                 </div>
             </div>
         </div>
