--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,8 +29,8 @@
 						</div>
 
 						<div class="form-group">
-							<div th:if="${error}">
-								<p th:text="${error}" style="color: red; text-align: center;"></p>
+							<div th:if="${param.error}">
+								<p style="color: red; text-align: center;">Felaktigt användarnamn eller lösenord</p>
 							</div>
 							<button type="submit" class="form-control btn btn-primary submit px-3">Logga In</button>
 						</div>
