--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -5,13 +5,20 @@
     <title>Spara och Para - Test av home</title>
     <th:block th:replace="~{layout.html :: head}"></th:block>
     <link rel="stylesheet" th:href="@{/css/test.css}">
+
+    <style>
+        .scrollable-column {
+            overflow-y: auto;
+            max-height: 100vh;
+        }
+    </style>
 </head>
 
-<body id="ihcx">
+<body class="img js-fullheight" style="background-image: url(/images/new.jpg);" id="ihcx">
 
 <div class="gjs-row" id="i7c7">
     <!--Left column-->
-    <div class="gjs-cell" id="iqnk">
+    <div class="gjs-cell scrollable-column" id="iqnk">
         <h3 class="mb-4 text-center" th:text="'Välkommen ' + ${firstName} + '!'">Alla användare</h3>
         <div th:each="user : ${users}" class="col-lg-6 mb-2 text-center mx-auto" style="min-width: 250px; max-width: fit-content; border: 1px solid #ccc; background-color: rgba(255, 255, 255, 0.8);">
             <div class="position-relative mb-2">
