--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8409,6 +8409,16 @@ body {
   padding: 20px;
   border-radius: 4px;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.popup-content input,
+.popup-content select {
+  margin-bottom: 10px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .close-button {
