--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8184,7 +8184,7 @@ h1, h2, h3, h4, h5,
 
 .heading-section {
   font-size: 28px;
-  color: #fff; }
+  color: #000000; }
 
 .img {
   background-size: cover;
@@ -8196,7 +8196,7 @@ h1, h2, h3, h4, h5,
   color: rgba(255, 255, 255, 0.9); }
   .login-wrap h3 {
     font-weight: 300;
-    color: #fff; }
+    color: #000000; }
   .login-wrap .social {
     width: 100%; }
     .login-wrap .social a {
@@ -8220,11 +8220,9 @@ h1, h2, h3, h4, h5,
   -webkit-transform: translateY(-50%);
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
-  color: rgba(255, 255, 255, 0.9); }
+  color: rgba(0, 0, 0, 0.5); }
 
 .form-control {
-  background: transparent;
-  border: none;
   height: 50px;
   color: white !important;
   border: 1px solid transparent;
@@ -8242,24 +8240,24 @@ h1, h2, h3, h4, h5,
       transition: none; } }
   .form-control::-webkit-input-placeholder {
     /* Chrome/Opera/Safari */
-    color: rgba(255, 255, 255, 0.8) !important; }
+    color: rgba(0, 0, 0, 0.8) !important; }
   .form-control::-moz-placeholder {
     /* Firefox 19+ */
-    color: rgba(255, 255, 255, 0.8) !important; }
+    color: rgba(0, 0, 0, 0.8) !important; }
   .form-control:-ms-input-placeholder {
     /* IE 10+ */
-    color: rgba(255, 255, 255, 0.8) !important; }
+    color: rgba(0, 0, 0, 0.8) !important; }
   .form-control:-moz-placeholder {
     /* Firefox 18- */
-    color: rgba(255, 255, 255, 0.8) !important; }
+    color: rgba(0, 0, 0, 0.8) !important; }
   .form-control:hover, .form-control:focus {
     background: transparent;
     outline: none;
     -webkit-box-shadow: none;
     box-shadow: none;
-    border-color: rgba(255, 255, 255, 0.4); }
+    border-color: rgba(0, 0, 0, 0.4); }
   .form-control:focus {
-    border-color: rgba(255, 255, 255, 0.4); }
+    border-color: rgba(0, 0, 0, 0.4); }
 
 textarea.form-control {
   height: inherit !important; }
