--- a/src/main/resources/templates/groups-list.html
+++ b/src/main/resources/templates/groups-list.html
@@ -8,7 +8,7 @@
     <th:block th:replace="~{layout.html :: head}"></th:block>
 </head>
 
-<body class="img js-fullheight" style="background-image: url(/images/test_copy.jpg);">
+<body class="img js-fullheight" style="background-image: url(/images/new.jpg);">
 <section class="ftco-section">
     <div class="container">
         <div class="row justify-content-center">
