--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 	<th:block th:replace="~{layout.html :: head}"></th:block>
 </head>
 
-<body class="img js-fullheight" style="background-image: url(/images/test_copy.jpg);">
+<body class="img js-fullheight" style="background-image: url(/images/new.jpg);">
 <section class="ftco-section">
 	<div class="container">
 		<div class="row justify-content-center">
@@ -21,10 +21,10 @@
 					<form th:action="@{/login}" method="post" class="signin-form">
 						<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 						<div class="form-group">
-							<input type="text" class="form-control" placeholder="Epost" name="username" required>
+							<input type="text" class="form-control" placeholder="Epost" name="username" required style="color: black !important;">
 						</div>
 						<div class="form-group">
-							<input id="password-field" type="password" class="form-control" placeholder="Lösenord" name="password" required>
+							<input id="password-field" type="password" class="form-control" placeholder="Lösenord" name="password" required style="color: black !important;">
 							<span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
 						</div>
 
@@ -41,9 +41,6 @@
 		</div>
 	</div>
 </section>
-
-<div th:replace="~{layout.html :: menu}">
-</div>
 
 <div th:replace="~{layout.html :: scripts}">
 </div>
