--- a/src/main/resources/templates/users-create.html
+++ b/src/main/resources/templates/users-create.html
@@ -7,7 +7,7 @@
   <th:block th:replace="~{layout.html :: head}"></th:block>
 </head>
 
-<body class="img js-fullheight" style="background-image: url(/images/test_copy.jpg);">
+<body class="img js-fullheight" style="background-image: url(/images/new.jpg);">
 <section class="ftco-section">
   <div class="container">
     <div class="row justify-content-center">
@@ -21,19 +21,20 @@
           <h3 class="mb-4 text-center">Ny användare</h3>
           <form role="form" method="post" th:action="@{/users/new}" th:object="${user}">
             <div class="form-group">
-              <input type="text" class="form-control" id="email" name="email" th:field="*{email}" placeholder="Epost" required>
+              <input type="text" class="form-control" id="email" name="email" th:field="*{email}" placeholder="Epost" required style="color: black !important;">
               <p th:if="${#fields.hasErrors('email')}" class="text-danger" th:errors="*{email}"></p>
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" id="firstName" name="firstName" th:field="*{firstName}" placeholder="Förnamn" required>
+              <input type="text" class="form-control" id="firstName" name="firstName" th:field="*{firstName}" placeholder="Förnamn" required style="color: black !important;">
               <p th:if="${#fields.hasErrors('firstName')}" class="text-danger" th:errors="*{firstName}"></p>
             </div>
             <div class="form-group">
-              <input type="text" class="form-control" id="lastName" name="lastName" th:field="*{lastName}" placeholder="Efternamn" required>
+              <input type="text" class="form-control" id="lastName" name="lastName" th:field="*{lastName}" placeholder="Efternamn" required style="color: black !important;">
               <p th:if="${#fields.hasErrors('lastName')}" class="text-danger" th:errors="*{lastName}"></p>
             </div>
             <div class="form-group">
-              <input type="password" class="form-control" id="password" name="password" th:field="*{password}" placeholder="Lösenord" required>
+              <input type="password" class="form-control" id="password" name="password" th:field="*{password}" placeholder="Lösenord" required style="color: black !important;">
+              <span toggle="#password" class="fa fa-fw fa-eye field-icon toggle-password"></span>
               <p th:if="${#fields.hasErrors('password')}" class="text-danger" th:errors="*{password}"></p>
             </div>
             <div class="form-group">
@@ -43,7 +44,7 @@
               <button type="submit" class="form-control btn btn-primary submit px-3">Skapa användare</button>
             </div>
           </form>
-          <p class="w-100 text-center"><a th:href="@{../}">— Redan konto? Logga in —</a></p>
+          <p class="w-100 text-center" ><a th:href="@{../}">— Redan konto? Logga in —</a></p>
         </div>
       </div>
     </div>
